Update: No button

--- a/index.html
+++ b/index.html
@@ -49,7 +49,12 @@
 
                <div class="final-text">
                  <p>Would You be my Valentine?</p>
-               </div>
+                 
+                 <div class="buttons-container">
+                   <button id="btnYes" class="btn btn-yes">Yes</button>
+                   <button id="btnNo" class="btn btn-no">No</button>
+                 </div>
+                 </div>
             </div>
 
           </a>
